--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,27 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.1
   dio: ^5.9.0
+  flutter_dotenv: ^6.0.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  toastification: ^3.0.3
+  shared_preferences: ^2.5.3
+  agora_rtc_engine: ^6.5.3
+  permission_handler: ^12.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.15
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -60,8 +77,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
