--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.15
   cached_network_image: ^3.4.1
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
